corrected visibility of datepicker icon, provided by browser, for dark mode

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -18,6 +18,10 @@
   box-shadow: 0 0.25em 0.5em rgba(0, 0, 0, 0.1);
 }
 
+.dark-theme input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(100%);
+}
+
 header h1 {
   font-size: 2.5rem;
   margin-bottom: 0.5em;
